<resources>
    <string name="app_name" translatable="false">SoundMeter</string>
    <string name="app_version">version 1.0</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="colon" translatable="false">:</string>
    <string name="left_parenthesis" translatable="false">(</string>
    <string name="right_parenthesis" translatable="false">)</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="il_normal" >Normal</string>
    <string name="il_moderate_danger">Not safe</string>
    <string name="il_considerable_danger">Warning</string>
    <string name="il_high_danger">Danger</string>
    <string name="il_extreme_danger">Extreme Danger</string>
    <string name="title_soundmeter">Sound Meter</string>
    <string name="title_history">History</string>
    <string name="title_hearing_test">Hearing Test</string>
    <string name="title_noise_level_suggest">Noise standards</string>
    <string name="title_focusing_music">Focusing Music</string>
    <string name="title_share">Snap &amp; Share</string>
    <string name="title_setting">Settings</string>
    <string name="title_exit">Exit</string>
    <string name="title_history_save">Save result</string>
    <string name="title_history_delete_all">Delete all history</string>
    <string name="title_history_delete">Delete selected history</string>
    <string name="title_image_delete">Delete image</string>
    <string name="title_back">Back</string>
    <string name="title_snap">Take a picture</string>
    <string name="title_share_button">Share</string>
    <string name="title_start_hearing_test">Start hearing test</string>
    <string name="title_continue">Continue</string>
    <string name="title_finish">Finish</string>
    <string name="title_exit_test">Exit test</string>
    <string name="title_back_calibration">Back to Calibration step</string>
    <string name="title_finish_test">Finish test</string>
    <string name="title_back_testing">Back to Testing step</string>
    <string name="title_headphone_disconnect">Headphone or headset disconnected</string>
    <string name="title_testing">Testing</string>
    <string name="title_result">Result</string>
    <string name="title_buildings">Buildings</string>
    <string name="title_test_again">Test again</string>
    <string name="title_show_value">Show value</string>
    <string name="title_measure">Start measure</string>
    <string name="title_measure_again">Measure again</string>
    <string name="title_check_other_place">Check other places</string>
    <string name="title_category">Category</string>
    <string name="title_listen">Listen</string>
    <string name="sound_unit">dB</string>
    <string name="sound_testing_unit" translatable="false">dBHL</string>
    <string name="sound_frequency_unit" translatable="false">Hz</string>
    <string name="sound_minlabel">MIN</string>
    <string name="sound_avglabel">AVERAGE</string>
    <string name="sound_avglabel_1">AVERAGE</string>
    <string name="sound_maxlabel">MAX</string>
    <string name="sound_standardlabel">STANDARD (dB)</string>
    <string name="sound_actuallabel">ACTUAL (dB)</string>
    <string name="noise_20" translatable="false">20dB</string>
    <string name="noise_20_des">Leaves rustling</string>
    <string name="noise_30" translatable="false">30dB</string>
    <string name="noise_30_des">Whisper</string>
    <string name="noise_40" translatable="false">40dB</string>
    <string name="noise_40_des">Quiet library</string>
    <string name="noise_50" translatable="false">50dB</string>
    <string name="noise_50_des">Moderate rainfall</string>
    <string name="noise_60" translatable="false">60dB</string>
    <string name="noise_60_des">Normal conversation</string>
    <string name="noise_70" translatable="false">70dB</string>
    <string name="noise_70_des">Traffic, Vacuums</string>
    <string name="noise_80" translatable="false">80dB</string>
    <string name="noise_80_des">Alarm clocks</string>
    <string name="noise_90" translatable="false">90dB</string>
    <string name="noise_90_des">Lawnmowers, Power tools</string>
    <string name="noise_100" translatable="false">100dB</string>
    <string name="noise_100_des">Snowmobiles</string>
    <string name="noise_110" translatable="false">110dB</string>
    <string name="noise_110_des">Car horns, Concerts</string>
    <string name="noise_120" translatable="false">120dB</string>
    <string name="noise_120_des">Jet planes (during take off)</string>
    <string name="noise_130" translatable="false">130dB</string>
    <string name="noise_130_des">Ambulances, Jackhammers</string>
    <string name="noise_140" translatable="false">140dB</string>
    <string name="noise_140_des">Fireworks, Gun shots</string>
    <string name="activity_soundmeter">Sound Meter</string>
    <string name="activity_exvalue">0</string>
    <string name="activity_exdur">mm:ss</string>
    <string name="activity_statuslabel">Status</string>
    <string name="activity_exstatus">Normal Conversation</string>
    <string name="activity_curlabel">Current (dB)</string>
    <string name="activity_durlabel">Duration </string>
    <string name="activity_resultlabel">Result (dB) </string>
    <string name="activity_chartlabel">Noise Chart</string>
    <string name="activity_calibratelabel">Calibrate</string>
    <string name="activity_pickerlabel">Set dB value for warning</string>
    <string name="activity_language">Language</string>
    <string name="activity_extime">hh:mm:ss</string>
    <string name="activity_exdate">dd-MM-YYYY</string>
    <string name="activity_helplabel">Help</string>
    <string name="activity_can_hear">I can hear</string>
    <string name="activity_cannot_hear">I cannot hear</string>
    <string name="activity_loading">Loading…</string>
    <string name="activity_recStartErr">Unable to start recording</string>
    <string name="activity_recBusyErr">Recorder is busy or permission to record is prohibited</string>
    <string name="activity_recFileErr">Can not create file</string>
    <string name="activity_delete_all_confirm">Do you want to delete all history ?</string>
    <string name="activity_delete_confirm">Do you want to delete the selected history ?</string>
    <string name="activity_delete_image_confirm">Do you want to delete this image ?</string>
    <string name="activity_save_confirm">Do you want to save this measure result ?</string>
    <string name="activity_calibrate">Performance of the microphone will be different for each device, so calibration is need before use.</string>
    <string name="activity_save">Save</string>
    <string name="activity_confirm">Confirm</string>
    <string name="activity_cancel">Cancel</string>
    <string name="activity_delete">Delete</string>
    <string name="activity_cameraStartErr">Unable to open due to permission"'"s denial</string>
    <string name="activity_avg_value">Average SPL</string>
    <string name="activity_unidentified_location">Unidentified location</string>
    <string name="activity_hearingTestStartErr">Please connect headphones or headset before starting the test</string>
    <string name="activity_exit_hearingTest">Do you want to exit the hearing test ?</string>
    <string name="activity_back_calibration_hearingTest">Do you want to get back to calibration step ?</string>
    <string name="activity_back_testing_hearingTest">Do you want to get back to testing step ?</string>
    <string name="activity_test_again_hearingTest">Do you want to test again ?</string>
    <string name="activity_proceed_result_hearingTest">Do you want to finish and get result ?</string>
    <string name="activity_test_headphone_remind">Please connect your headphones or headset to continue the test</string>
    <string name="activity_test_volume_denied">Cannot adjust volume during the test</string>
    <string name="activity_exit_noiseSuggest">Do you want to exit Noise standards ?</string>
    <string name="activity_snap_location_on">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="noti_refresh">Refreshed</string>
    <string name="noti_pause">Paused</string>
    <string name="noti_resume">Resumed</string>
    <string name="noti_history_saved">History has been saved</string>
    <string name="noti_history_unsaved">Error: History has not been saved</string>
    <string name="noti_history_null">There is no history available</string>
    <string name="noti_all_history_delete">All histories have been deleted</string>
    <string name="noti_history_delete">History has been deleted</string>
    <string name="noti_image_delete">Image has been deleted</string>
    <string name="noti_history_delete_fail">Error: History has not been deleted</string>
    <string name="noti_calibrate_save">Value has been save</string>
    <string name="noti_warning_value_save">Value has been save</string>
    <string name="noti_snap">\t\t Please allow the app to use Location otherwise function will not run. \n\n\t\t Also remember to have either Location turned on and Network connected in order to get your location. </string>
    <string name="noti_hearing_test">\t\t Headphones or headset is required for this test. \n\n\t\t Please connect your headphones or headset and wear it properly before starting the test. </string>
    <string name="noti_hearing_test_calibration">\t\t Calibration is a necessary step to adjust your device"'"volume appropriate for your test. \n\n\t\t\ Rub your hands together, in front of your nose, quickly and firmly, and try producing the same sound as our calibration file. \n\n\t\t As you play our calibration file, adjust your device"'"s volume to match the sound level you just heard from you hands. \n\n\t\t Proceed back and forth until both levels match, then we are ready to begin the test. </string>
    <string name="noti_hearing_test_help">\t\t Press &quot;Play&quot; icon button to hear the sound. \n\n\t\t Press button &quot;I can hear&quot; if you hear the sound, the sound then will be played again with lower sound level. \n\n\t\t Press button &quot;I cannot hear&quot; if you don"'"t hear the sound, the sound then will be played again with higher sound level. \n\n\t\t Stop until you are at the sound level you can hear but cannot at the lower sound level. \n\n\t\t Repeating the progress until you finish the test, there are 7 sound with different frequency from 125Hz to 8000Hz for each ear. \n\n\t\t Press button &quot;Finish&quot; to finish the test and get result.</string>
    <string name="noti_noise_suggestion">\t\t Noise standards provides you maximum values of noise allowed in different places. \n\n\t\t Moreover, you can even measure current location"'"s noise and see if it meet the standard.</string>
    <string name="noti_noise_suggestion_help">\t\t Choose a building and its section which you want to know its noise"'"s standard value. \n\n\t\t Then you can choose whether to see the value or have the app measure the noise and return result. \n\n\t\t Press button &quot;Show value&quot; to check the standard value. \n\n\t\t Press button &quot;Start measure&quot; to check if the current location"'"s noise meets the standard. \n\n\t\t Make sure you choose the correct building and its section before start measure noise.</string>
    <string name="noti_noise_suggestion_choose_building">Choose a building you would like to check standard value </string>
    <string name="noti_noise_suggestion_choose_section_1">Choose an area in</string>
    <string name="noti_noise_suggestion_choose_section_2">you would like to check standard value</string>
    <string name="noti_noise_suggestion_testing">This action may take a few seconds. \n Please wait until it finishes.</string>
    <string name="noti_noise_suggestion_conclusion_true">The noise which is measured meets the standard</string>
</resources>