<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.circularreveal.CircularRevealLinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="@dimen/padding_20dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:layout_gravity="center"
            android:text="@string/activity_helplabel"
            android:textSize="@dimen/font_20sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noti_hearing_test_help"
            android:textColor="@color/black"
            android:textSize="@dimen/font_18sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_close"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="@dimen/padding_10dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:text="@string/close"
            android:textSize="@dimen/font_16sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorAccent"/>
    </com.google.android.material.circularreveal.CircularRevealLinearLayout>
</layout>